--- a/Clase 4/Lemonpie.html
+++ b/Clase 4/Lemonpie.html
@@ -53,55 +53,53 @@
         </section>
         <section>
             <h2>Instrucciones</h2>
-             <p>
-                <ol start="1">
+            <p>
+            <ol start="1">
                 <li>Procesar o mezclar ligeramente la harina, el azúcar y la manteca fría curtada en cubitos, hasta
                     formar un
                     arenado. Agregar el huevo y unir la masa sin trabajarla mucho. Envolver en film y llevar a la
                     heladera
                     por 30 minutos aproximadamente.</li>
-                </ol>
-             </p>
-             <p>
-                 <ol start="2">
-                     <li>Precalentar el horno a temperatura media (180°C).</li>
-                 </ol>
+            </ol>
             </p>
             <p>
-                <ol start = "3">
-                    <li>Estirar sobre una mesada enharinada y tapizar un molde para tarta desmontable de 22 cm de diámetro.
-                        Cocinar durante 20 minutos o hasta que comience a dorarse.</li>
-                </ol>
+            <ol start="2">
+                <li>Precalentar el horno a temperatura media (180°C).</li>
+            </ol>
             </p>
             <p>
-                <ol start = "4">
-                    <li>Mezclar la leche condensada con 4 yemas, 150cc de jugo de limón e integrar la ralladura. Unir bien y
-                        verter sobre la masa precocida. Cocinar en horno moderado durante 15 minutos.</li>
-                </ol>
+            <ol start="3">
+                <li>Estirar sobre una mesada enharinada y tapizar un molde para tarta desmontable de 22 cm de diámetro.
+                    Cocinar durante 20 minutos o hasta que comience a dorarse.</li>
+            </ol>
             </p>
             <p>
-                <ol start = "5">
-                    <li>Colocar el azúcar en una cacerolita y cubrir con apenas con agua. Cocinar hasta obtener la textura de un
-                        merengue italiano</li>
-                </ol>
+            <ol start="4">
+                <li>Mezclar la leche condensada con 4 yemas, 150cc de jugo de limón e integrar la ralladura. Unir bien y
+                    verter sobre la masa precocida. Cocinar en horno moderado durante 15 minutos.</li>
+            </ol>
             </p>
             <p>
-                <ol start = "6">
-                    <li>Unos minutos antes del punto del almíbar, comenzar a batir las claras. Cuando empiecen a formar picos,
-                        añadir gota a gota el almíbar caliente sin dejar de batir hasta que se enfríe.</li>
-                </ol>
+            <ol start="5">
+                <li>Colocar el azúcar en una cacerolita y cubrir con apenas con agua. Cocinar hasta obtener la textura
+                    de un
+                    merengue italiano</li>
+            </ol>
             </p>
             <p>
-                <ol start = "7">
-                    <li>Decorar con el merengue y gratinar.</li>
-                </ol>
+            <ol start="6">
+                <li>Unos minutos antes del punto del almíbar, comenzar a batir las claras. Cuando empiecen a formar
+                    picos,
+                    añadir gota a gota el almíbar caliente sin dejar de batir hasta que se enfríe.</li>
+            </ol>
+            </p>
+            <p>
+            <ol start="7">
+                <li>Decorar con el merengue y gratinar.</li>
+            </ol>
             </p>
         </section>
     </main>
-    <footer>
-        <hr>
-        <p align='center'>Todos los derechos reservados.</p>
-    </footer>
 </body>
 
 </html>
