lemon pie version final

--- a/Lemon_pie/Lemonpie.html
+++ b/Lemon_pie/Lemonpie.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase 4 Introduccion HTML</title>
-    <link rel="stylesheet" href="">
 </head>
 
 <body>
     <header>
-        <img src="C:\workspace\CERTIFIED TECH DEVELOPER\FRONTED I\Clase 4\img\Group.png" alt="Logo Front End 1" />
+        <img src="C:\workspace\Repositorios\Frontend_1\Lemon_pie\img\Group.png" alt="Logo Front End 1" />
         <br>
         <br>
-        <img src="C:\workspace\CERTIFIED TECH DEVELOPER\FRONTED I\Clase 4\img\lemon-pie 1.jpg" />
+        <img src="C:\workspace\Repositorios\Frontend_1\Lemon_pie\img\lemon-pie 1.jpg" />
     </header>
     <main>
         <h1 align='center'>El clásico Lemon Pie</h1>
