--- a/Lemon_pie/Lemonpie.html
+++ b/Lemon_pie/Lemonpie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clase 4 Introduccion HTML</title>
+    <title>Lemon pie</title>
 </head>
 
 <body>
