--- a/CV_Batman/CV_batman.html
+++ b/CV_Batman/CV_batman.html
@@ -10,15 +10,18 @@
 </head>
 
 <body>
-    <header align="center">
-        <img src="img/logo batman.png" alt="logo batman">
-        <section>
-            <h1 align="center">CURRICULUM VITAE DE BRUCE WAYNE</h1>
+    <header>
+        <section class="logo">
+            <img src="img/logo batman.png" alt="logo batman">
+            <h1>Curriculum Vitae de Bruce Wayne</h1>
         </section>
     </header>
     <main>
         <section>
-            <h2>DATOS PERSONALES</h2>
+            <br>
+            <br>
+            <br>
+            <h2>Datos Personales</h2>
             <ul type="disc">
                 <li>Nombre completo: Bruce Wayne</li>
                 <li>Fecha de nacimiento: 01/05/1939</li>
@@ -26,7 +29,7 @@
             </ul>
         </section>
         <section>
-            <h2>FORMACION ACADEMICA</h2>
+            <h2>Formacion Academica</h2>
             <dl>
                 <dt><span>1956-1961:</span> Universidad del espantapajaros</dt>
                 <dd>Licenciatura en aeronautica</dd>
@@ -36,7 +39,7 @@
             </dl>
         </section>
         <section>
-            <h2>EXPERIENCIA LABORAL</h2>
+            <h2>Experiencia Laboral</h2>
             <dl>
                 <dt><span>1975-1985:</span> Desocupado</dt>
                 <dd>Sin trabajo porque se me rompio el batimovil</dd>
@@ -48,9 +51,20 @@
                 <dd>Hice pasantia con Superman. Optepor usar mascara porque no pude aprender a peinarme el rulo</dd>
             </dl>
         </section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </main>
     <footer>
-        <p>0810-BATMAN</p>
+        <span>0810-BATMAN</span>
+        <img src="./img/ico_instagram.png" alt="logo instagram">
+        <img src="./img/ico_linkedin.png" alt= 'logo Linkedin'>
     </footer>
 </body>
 </html>
