--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
         <h1 align="center">Trabajos practicos Front end I</h1>
         <hr>
         <h2>
-          <a href= "Lemon_pie/Lemonpie.html">Lemon Pie</a> 
+            <li>
+                <a href= "Lemon_pie/Lemonpie.html">Lemon Pie</a>
+            </li>
+            <br>
+            <li>
+                <a href="Pet_Shop/petshop.html">Pet Shop</a>
+            </li>
+            <br>
+            <li>
+                <a href="./CV_Batman/CV_batman.html">CV Batman</a>
+            </li>
+         
         </h2>
     </header>
 
