nuevos cambios Btman

--- a/CV_Batman/CV_batman.html
+++ b/CV_Batman/CV_batman.html
@@ -23,9 +23,9 @@
             <br>
             <h2>Datos Personales</h2>
             <ul type="disc">
-                <li>Nombre completo: Bruce Wayne</li>
-                <li>Fecha de nacimiento: 01/05/1939</li>
-                <li>Lugar de nacimiento: Gotham City</li>
+                <li><span class="datos">Nombre completo: </span>Bruce Wayne</li>
+                <li><span class="datos">Fecha de nacimiento: </span>01/05/1939</li>
+                <li><span class="datos">Lugar de nacimiento: </span>Gotham City</li>              
             </ul>
         </section>
         <section>
