--- a/CV_Personal/CV_Personal.html
+++ b/CV_Personal/CV_Personal.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV Natali</title>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <section>
+            <img src="./img/shooting.PNG" alt="Foto de Produccion">
+            <h1>Curriculum Natali correa</h1>
+            <br>
+            <hr>
+        </section>
+    </header>
+    
+    <main>
+        <section>
+            <h2>Un poco sobre mi</h2>
+            <a href="./sobremi.html">CONOCE MÁS</a>
+        </section>
+        <section>
+            <h2>Datos Personales</h2>
+            <ul type="disc">
+                <li><span class="datos">Nombre completo: </span>Tamara Natali Correa</li>
+                <li><span class="datos">Fecha de nacimiento: </span>14/04/1993</li>
+                <li><span class="datos">Lugar de nacimiento: </span>Goya, Corrientes</li>              
+            </ul>
+        </section>
+        <section>
+            <h2>Formacion Academica</h2>
+            <dl>
+                <dt><span>2021:</span> Digital House</dt>
+                <dd>Tech Developer</dd>
+
+                <dt><span>2011-2019:</span> Universidad Tecnologica Nacional</dt>
+                <dd>Ingenieria Quimica</dd>
+
+                <dt><span>2005-2010:</span> Secundario Inst. Santa Teresa de Jesús</dt>
+                <dd>Especializacion Humanidades y Ciencia Sociales</dd>
+            </dl>
+        </section>
+        <section>
+            <h2>Experiencia Laboral</h2>
+            <dl>
+                <dt><span>2021:</span> Desocupada</dt>
+                <dd>Pero algunas veces trabajo como Modelo.</dd>
+
+                <dt><span>2020:</span> Niñera</dt>
+                <dd>Cuide a dos mellizas.</dd>
+
+                <dt><span>2018</span> Modelo profesional</dt>
+                <dd>Comence a trabajar como modelo.</dd>
+            </dl>
+        </section>
+    </main>
+    <footer>
+        <h3>Natali Correa, 2021</h3>
+        <a href="https://natalicorrea.github.io/Frontend_1/"></a>
+        <a href="https://www.instagram.com/natali.tc/"><i class="fab fa-instagram"></i></a>
+    </footer>
     
 </body>
 </html>
