--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <li>
                 <a href="./CV_Batman/CV_batman.html">CV Batman</a>
             </li>
+            <br>
+            <li>
+                <a href="./CV_Personal/CV_Personal.html">CV Personal</a>
+            </li>
          
         </h2>
     </header>
